# AutoBLAST

./: .gitignore  README.md  Snakefile  addcounts.py  blast_summary.sh  contigmap.py  contigselection.py  digest.py  digestpd.py  nuvselect.py  primeselect.py  pyproject.toml  qton.py  rnaseq_pipeline.sh  tie.py  translate_6frames.py
assemble.scaffold/: MT002973 ToBRFV.fasta  bioalign.py  split farmaTo contigs.fa  tobrfv consensus.fa  tobrfv msa.fa
guide/: Automating BLAST.docx
scripts/: add_domains.py  addcounts.py  combine_parsed_hits.py  contigmap.py  dl_wrapper.sh  download_hits_align_contigs.py  extract_contigs.py  parse_BLAST_results.py  parse_tblout.py  tie.py
sra/: download_SRA.sh  esearch_query.sh  getSRA.sh  get_SRA_metadata.py  get_meta.py  sra_ids1.txt  sra_metadata.csv  sra_samples1.txt
tests/: test_parse_BLAST_results.py
tests/inputs/: sample_22_viral_contigs_blasted.txt
tie/: 22blasthits.csv  nuvselfunc.py  tie.py
